[tool.poetry]
name = "lv-pck"
version = "0.1.0"
description = ""
authors = ["aieo94 <wahidi.anas14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "23.2.0"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
h11 = "0.14.0"
idna = "3.6"
installer = "0.7.0"
jaraco-classes = "3.3.0"
keyring = "24.3.0"
more-itertools = "10.2.0"
msgpack = "1.0.7"
numpy = "1.26.3"
outcome = "1.3.0.post0"
packaging = "23.2"
pandas = "2.2.0"
pexpect = "4.9.0"
pip = "24.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
selenium = "4.17.2"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
tomlkit = "0.12.3"
trio = "0.24.0"
trio-websocket = "0.11.1"
trove-classifiers = "2024.1.31"
typing-extensions = "4.9.0"
tzdata = "2023.4"
urllib3 = "2.2.0"
virtualenv = "20.25.0"
wsproto = "1.2.0"
pydantic = "^2.6.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
attrs = "23.2.0"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
h11 = "0.14.0"
idna = "3.6"
installer = "0.7.0"
jaraco-classes = "3.3.0"
keyring = "24.3.0"
more-itertools = "10.2.0"
msgpack = "1.0.7"
numpy = "1.26.3"
outcome = "1.3.0.post0"
packaging = "23.2"
pandas = "2.2.0"
pexpect = "4.9.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
selenium = "4.17.2"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
tomlkit = "0.12.3"
trio = "0.24.0"
trio-websocket = "0.11.1"
trove-classifiers = "2024.1.31"
typing-extensions = "4.9.0"
tzdata = "2023.4"
urllib3 = "2.2.0"
virtualenv = "20.25.0"
wsproto = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
